Created WingsOn.Core project.

--- a/WingsOn.FlightManagementService/WingsOn.Dal/WingsOn.Dal.csproj
+++ b/WingsOn.FlightManagementService/WingsOn.Dal/WingsOn.Dal.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\WingsOn.Core\WingsOn.Core.csproj" />
     <ProjectReference Include="..\WingsOn.Domain\WingsOn.Domain.csproj" />
   </ItemGroup>
 
