--- a/WingsOn.FlightManagementService/WingsOn.Domain/WingsOn.Domain.csproj
+++ b/WingsOn.FlightManagementService/WingsOn.Domain/WingsOn.Domain.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WingsOn.Core\WingsOn.Core.csproj" />
+  </ItemGroup>
+
 </Project>
