--- a/WingsOn.FlightManagementService/WingsOn.Services/WingsOn.Services.csproj
+++ b/WingsOn.FlightManagementService/WingsOn.Services/WingsOn.Services.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\WingsOn.Core\WingsOn.Core.csproj" />
+    <ProjectReference Include="..\WingsOn.Dal\WingsOn.Dal.csproj" />
   </ItemGroup>
 
 </Project>
