Added XML documentation comments to repositories.

--- a/WingsOn.FlightManagementService/WingsOn.Dal/WingsOn.Dal.csproj
+++ b/WingsOn.FlightManagementService/WingsOn.Dal/WingsOn.Dal.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>F:\git\workshop2\WingsOn.Workshop\WingsOn.FlightManagementService\WingsOn.Dal\WingsOn.Dal.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\WingsOn.Core\WingsOn.Core.csproj" />
     <ProjectReference Include="..\WingsOn.Domain\WingsOn.Domain.csproj" />
