--- a/WingsOn.FlightManagementService/WingsOn.Services/WingsOn.Services.csproj
+++ b/WingsOn.FlightManagementService/WingsOn.Services/WingsOn.Services.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>F:\git\workshop2\WingsOn.Workshop\WingsOn.FlightManagementService\WingsOn.Services\WingsOn.Services.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\WingsOn.Core\WingsOn.Core.csproj" />
     <ProjectReference Include="..\WingsOn.Dal\WingsOn.Dal.csproj" />
