Implemented mapper based on AutoMapper. Created mappings.

--- a/WingsOn.FlightManagementService/WingsOn.Services/WingsOn.Services.csproj
+++ b/WingsOn.FlightManagementService/WingsOn.Services/WingsOn.Services.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\WingsOn.Core\WingsOn.Core.csproj" />
     <ProjectReference Include="..\WingsOn.Dal\WingsOn.Dal.csproj" />
   </ItemGroup>
