--- a/WingsOn.FlightManagementService/WingsOn.Api/WingsOn.Api.csproj
+++ b/WingsOn.FlightManagementService/WingsOn.Api/WingsOn.Api.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
   </ItemGroup>
