--- a/WingsOn.FlightManagementService/WingsOn.Api/WingsOn.Api.csproj
+++ b/WingsOn.FlightManagementService/WingsOn.Api/WingsOn.Api.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
+    <PackageReference Include="NSwag.AspNetCore" Version="13.1.6" />
   </ItemGroup>
 
   <ItemGroup>
