Removed hardcoded paths to XML documentation files.

--- a/WingsOn.FlightManagementService/WingsOn.Api/WingsOn.Api.csproj
+++ b/WingsOn.FlightManagementService/WingsOn.Api/WingsOn.Api.csproj
@@ -1,12 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>F:\git\workshop2\WingsOn.Workshop\WingsOn.FlightManagementService\WingsOn.Api\WingsOn.Api.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
