--- a/WingsOn.FlightManagementService/WingsOn.Api.Integration.Tests/WingsOn.Api.Integration.Tests.csproj
+++ b/WingsOn.FlightManagementService/WingsOn.Api.Integration.Tests/WingsOn.Api.Integration.Tests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="5.9.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="2.1.1" />
     <PackageReference Include="Moq" Version="4.13.1" />
